GameSpace: Add do not change option to ringer mode
* And make it default option.

Signed-off-by: cjh1249131356 <cjh1249131356@gmail.com>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Change-Id: I40baa340da8c52b49e7396afc6646c73565df3fc

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,12 +44,11 @@
     <string name="stay_awake_summary">Keep screen awake while in the game</string>
     <string name="lock_gesture_title">Lock Gesture</string>
 
-    <string name="ringer_mode_title">In-game ringer mode</string>
-    <string-array name="ringer_mode_entries">
-        <item>Silent</item>
-        <item>Vibrate</item>
-        <item>Normal</item>
-    </string-array>
+    <string name="ringer_mode_title">Ringer mode</string>
+    <string name="ringer_mode_silent">Silent</string>
+    <string name="ringer_mode_vibrate">Vibrate</string>
+    <string name="ringer_mode_normal">Normal</string>
+    <string name="ringer_mode_no_change">Do not change</string>
 
     <string name="suppress_fullscreen_intent_title">Block fullscreen event</string>
     <string name="suppress_fullscreen_intent_summary">Prevent fullscreen events like incoming calls from appearing while in-game</string>
